<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <CheckBoxPreference
        android:key="@string/simulate_route_key"
        android:title="@string/simulate_route"
        android:defaultValue="false" />
    <ListPreference
        android:key="@string/language_key"
        android:title="@string/language"
        android:entries="@array/language_array"
        android:entryValues="@array/language_values_array"
        android:defaultValue="@string/default_locale"/>
    <ListPreference
        android:key="@string/unit_type_key"
        android:title="@string/unit_type"
        android:entries="@array/unit_type_array"
        android:entryValues="@array/unit_type_values_array"
        android:defaultValue="@string/default_unit_type"/>
    <ListPreference
        android:entries="@array/route_profile_array"
        android:entryValues="@array/route_profile_values_array"
        android:key="@string/route_profile_key"
        android:title="@string/route_profile"/>
    <CheckBoxPreference
        android:key="@string/test_mode_key"
        android:title="@string/test_mode"
        android:defaultValue="false" />
</PreferenceScreen>